test_src/compiler_errors/types/boolean/LessThanOrEqualToBoolError2.b
class LessThanOrEqualToBoolError2 {
    void test() {
        println(true <= 2);
    }
}
